--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Core NuGet temporary location
+Source/Core/nuget
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
