--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -196,12 +196,5 @@
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-    <ItemGroup>
-        <SymbolSource Include="**\*.cs" />
-    </ItemGroup>
-    <Target Name="AfterBuild">
-        <Copy SourceFiles="Clide.nuspec" DestinationFolder="nuget" ContinueOnError="false" />
-        <Copy SourceFiles="@(SymbolSource)" DestinationFiles="@(SymbolSource->'nuget\src\%(RecursiveDir)%(Filename)%(Extension)')" ContinueOnError="false" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
-        <Exec Command="$(SolutionDir)\.nuget\NuGet.exe pack -NoPackageAnalysis nuget\Clide.nuspec -Symbols -OutputDirectory $(SolutionDir)\..\" ContinueOnError="false" />
-    </Target>
+    <Import Project="$(SolutionDir)\Clide.targets" />
 </Project>
