--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildThisFileDirectory)..\Clide.props" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -10,13 +11,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Clide</RootNamespace>
     <AssemblyName>Clide</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <OutputPath>nuget\lib\net40\</OutputPath>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\Clide.snk</AssemblyOriginatorKeyFile>
+    <OutputPath>nuget\lib\$(NugetTarget)\</OutputPath>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -87,8 +85,11 @@
     <Compile Include="Extensions\ComponentModelExtensions.cs" />
     <Compile Include="Extensions\MessageBoxServiceExtensions.cs" />
     <Compile Include="Extensions\TracingExtensions.cs" />
-    <Compile Include="Hosting\HostingPackage.cs" />
-    <Compile Include="Hosting\IHostingPackage.cs" />
+    <Compile Include="Hosting\Host.cs" />
+    <Compile Include="Hosting\HostFactory.cs" />
+    <Compile Include="Hosting\IHost.cs" />
+    <Compile Include="Hosting\LocalOnlyExportProvider.cs" />
+    <Compile Include="Hosting\SingletonComposition.cs" />
     <Compile Include="MessageBoxService.cs" />
     <Compile Include="DevEnv.cs" />
     <Compile Include="Diagnostics\IndentingTextListener.cs" />
@@ -170,6 +171,7 @@
       <LastGenOutput>Reflect.Overloads.cs</LastGenOutput>
     </None>
     <None Include="netfx\System\Reflection\TargetFramework.ttinclude" />
+    <None Include="NuGet.proj" />
     <None Include="packages.config" />
     <None Include="Properties\Resources.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -192,9 +194,23 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="netfx\System\Dynamic\" />
+    <SymbolSource Include="**\*.cs" Exclude="nuget\**\*.cs">
+      <Visible>False</Visible>
+    </SymbolSource>
+    <SymbolSource Include="**\*.xaml" Exclude="nuget\**\*.xaml">
+      <Visible>False</Visible>
+    </SymbolSource>
+    <SymbolSource Include="$(IntermediateOutputPath)**\*.cs">
+      <Visible>False</Visible>
+    </SymbolSource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-  <Import Project="$(SolutionDir)\Clide.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\.nuget\nuget.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\Clide.targets" />
+  <Target Name="AfterBuild" Condition="$(NuGet) == 'true'">
+    <!-- Copy spec file and sources to destination as needed -->
+    <Copy SourceFiles="Clide.nuspec" DestinationFolder="nuget" ContinueOnError="false" />
+    <Copy SourceFiles="@(SymbolSource)" DestinationFiles="@(SymbolSource->'nuget\src\%(RecursiveDir)%(Filename)%(Extension)')" ContinueOnError="false" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
+    <Copy SourceFiles="$(OutDir)$(TargetName).*" DestinationFolder="nuget\lib\$(NugetTarget)\" />
+  </Target>
 </Project>
