--- a/Source/IntegrationPackage/IntegrationPackage.csproj
+++ b/Source/IntegrationPackage/IntegrationPackage.csproj
@@ -52,10 +52,6 @@
     <None Include="..\Core\Core.licenseheader">
       <Link>Core.licenseheader</Link>
     </None>
-    <None Include="source.extension.vsixmanifest">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.ComponentModelHost, Version=$(VisualStudioVersion).0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -108,9 +104,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
+    <ProjectReference Include="..\Core\Clide.csproj">
       <Project>{EAF59C6D-A973-48E6-A90A-5E894ECEC3F6}</Project>
-      <Name>Core</Name>
+      <Name>Clide</Name>
     </ProjectReference>
   </ItemGroup>
   <!-- Begin VS 2010 / 2012 support -->
@@ -137,9 +133,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-      <Content Include="VisualStudio\2012\source.extension.vsixmanifest">
+    <Content Include="VisualStudio\2012\source.extension.vsixmanifest">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Content>
@@ -150,13 +144,13 @@
     <RegisterWithCodebase>true</RegisterWithCodebase>
     <StartAction>Program</StartAction>
     <StartProgram>C:\Program Files (x86)\Microsoft Visual Studio $(VisualStudioVersion)\Common7\IDE\devenv.exe</StartProgram>
-    <StartArguments>/rootSuffix Exp</StartArguments>
+    <StartArguments>/ResetSkipPkgs /rootSuffix Exp /log</StartArguments>
   </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\Clide.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="BeforeBuild">
-      <Message Text="Building for $(VisualStudioVersion)" Importance="high"/>
+    <Message Text="Building for $(VisualStudioVersion)" Importance="high" />
   </Target>
 </Project>
