Updated batch file and ignores for new folder path.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Core NuGet temporary location
-Source/Core/nuget
+Source/Clide/nuget
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
