--- a/Source/IntegrationTests/IntegrationTests.csproj
+++ b/Source/IntegrationTests/IntegrationTests.csproj
@@ -79,13 +79,13 @@
     <None Include="..\Clide.snk">
       <Link>Clide.snk</Link>
     </None>
-    <None Include="..\Core\Core.licenseheader">
-      <Link>Core.licenseheader</Link>
+    <None Include="..\Clide\Clide.licenseheader">
+      <Link>Clide.licenseheader</Link>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Clide.csproj">
+    <ProjectReference Include="..\Clide\Clide.csproj">
       <Project>{EAF59C6D-A973-48E6-A90A-5E894ECEC3F6}</Project>
       <Name>Clide</Name>
     </ProjectReference>
