--- a/Source/Clide/packages.config
+++ b/Source/Clide/packages.config
@@ -5,6 +5,7 @@
   <package id="netfx-System.AppDomainData" version="1.1.0.3" targetFramework="net40" />
   <package id="netfx-System.Collections.Generic.DictionaryGetOrAdd" version="1.1.1.1" targetFramework="net40" />
   <package id="netfx-System.ComponentModel.Attributes" version="1.0.0.0" targetFramework="net40" />
+  <package id="netfx-System.Dynamic.Reflection" version="1.1.1.0" targetFramework="net45" />
   <package id="netfx-System.Reflection.GetCustomAttribute" version="1.1.0.0" targetFramework="net40" />
   <package id="netfx-System.ServiceProvider" version="1.2.1.0" targetFramework="net40" />
   <package id="netfx-System.StringFormatWith" version="1.0.0.13" targetFramework="net40" />
