Renamed shared signing key for clarius labs. Fixed duplicate import of nuget targets.

--- a/Source/Clide.props
+++ b/Source/Clide.props
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">$(MSBuildThisFileDirectory)</SolutionDir>
         <SignAssembly>true</SignAssembly>
-        <AssemblyOriginatorKeyFile>$(SolutionDir)Clide.snk</AssemblyOriginatorKeyFile>
+        <AssemblyOriginatorKeyFile>$(SolutionDir)ClariusLabs.snk</AssemblyOriginatorKeyFile>
         <OutputPath>bin\$(VisualStudioVersion)\$(Configuration)\</OutputPath>
         <RestorePackages>true</RestorePackages>
     </PropertyGroup>
