--- a/Src/IntegrationTests/Content/SampleSolution/ClassLibrary/ClassLibrary.csproj
+++ b/Src/IntegrationTests/Content/SampleSolution/ClassLibrary/ClassLibrary.csproj
@@ -45,7 +45,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Folder\TextFile1.txt" />
+    <!--<Content Include="Folder\TextFile1.txt" />-->
+    <Content Include="**\*.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
