--- a/Src/IntegrationPackage/IntegrationPackage.csproj
+++ b/Src/IntegrationPackage/IntegrationPackage.csproj
@@ -46,11 +46,6 @@
     <Compile Include="ShellPackage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Clide\Clide.licenseheader">
-      <Link>Clide.licenseheader</Link>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.ComponentModelHost, Version=$(VisualStudioVersion).0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.ExtensibilityHosting, Version=$(VisualStudioVersion).0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio $(VisualStudioVersion)\Common7\IDE\PrivateAssemblies\Microsoft.VisualStudio.ExtensibilityHosting.dll</HintPath>
@@ -134,6 +129,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Common\ClariusLabs.licenseheader">
+      <Link>ClariusLabs.licenseheader</Link>
+    </None>
   </ItemGroup>
   <!-- End VS 2010 / 2012 support -->
   <PropertyGroup>
