--- a/Src/IntegrationTests/IntegrationTests.csproj
+++ b/Src/IntegrationTests/IntegrationTests.csproj
@@ -40,6 +40,9 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>c:\Program Files (x86)\Microsoft Visual Studio $(VisualStudioVersion)\Common7\IDE\PublicAssemblies\EnvDTE.dll</HintPath>
     </Reference>
+    <Reference Include="EnvDTE80, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.ComponentModelHost, Version=$(VisualStudioVersion).0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -75,6 +78,9 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +103,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsIntegrationSpec.cs" />
     <Compile Include="SettingsManagerSpec.cs" />
+    <Compile Include="Solution\AdaptersSpec.cs" />
     <Compile Include="Solution\SolutionEventsSpec.cs" />
     <Compile Include="Solution\SolutionExplorerSpec.cs" />
     <Compile Include="Solution\SolutionNodeSpec.cs" />
@@ -107,12 +114,12 @@
     <Compile Include="VsHostedSpec.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Clide\Clide.licenseheader">
-      <Link>Clide.licenseheader</Link>
-    </None>
     <Content Include="Content\SampleSolution\VBClassLibrary\My Project\Settings.settings">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="..\..\Common\ClariusLabs.licenseheader">
+      <Link>ClariusLabs.licenseheader</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
