--- a/Src/IntegrationPackage/IntegrationPackage.csproj
+++ b/Src/IntegrationPackage/IntegrationPackage.csproj
@@ -35,6 +35,9 @@
     <Compile Include="Constants.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="FooOptionsPage.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FooSettings.cs" />
     <Compile Include="FooView.xaml.cs">
       <DependentUpon>FooView.xaml</DependentUpon>
@@ -81,6 +84,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
