Added support for item and project dynamic properties.

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -126,6 +126,9 @@
     <Compile Include="OptionsPageAttribute.cs" />
     <Compile Include="IOptionsPageMetadata.cs" />
     <Compile Include="OptionsPageWindowFactory.cs" />
+    <Compile Include="Solution\Implementation\ConfigProjectProperties.cs" />
+    <Compile Include="Solution\Implementation\ItemProperties.cs" />
+    <Compile Include="Solution\Implementation\GlobalProjectProperties.cs" />
     <Compile Include="VisualStudio\VsHierarchyExtensions.cs" />
     <Compile Include="Hosting\Host.cs" />
     <Compile Include="Hosting\HostFactory.cs" />
