Updated release notes and version that will be published.

--- a/Src/Clide/Clide.nuspec
+++ b/Src/Clide/Clide.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>Clide</id>
-        <version>1.0</version>
+        <version>1.1</version>
         <title>Clide</title>
         <authors>Daniel Cazzulino</authors>
         <owners>Daniel Cazzulino</owners>
@@ -11,7 +11,19 @@
         <iconUrl>http://clarius.io/clide-48x48</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>High-level, composable and testable APIs for working with Visual Studio.</description>
-        <releaseNotes>Initial release of the APIs.</releaseNotes>
+        <releaseNotes>
+v1.1
+* ISolutionExplorer API, with full solution traversal, behaviors
+  for selecting, expanding and collapsing nodes, etc.
+* Integration with Adapter pattern for pluggable conversion of 
+  solution explorer nodes (i.e. projectNode.As&lt;EnvDTE.Project&gt;())
+* Improved diagnostics and debug-time rendering of nodes
+* Improved reporting of composition errors in the Clide output window
+v1.0
+* Full support for MEF-exported commands (ICommandExtension) and command filters
+* ToolWindow support
+* Tools options pages support
+        </releaseNotes>
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
         <dependencies />
