Fixed build script so that assembly version is incremented on build (allows side-by-side versions of Clide)

--- a/Src/Clide/Clide.nuspec
+++ b/Src/Clide/Clide.nuspec
@@ -11,19 +11,19 @@
         <iconUrl>http://clarius.io/clide-48x48</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>High-level, composable and testable APIs for working with Visual Studio.</description>
-        <releaseNotes>
-v1.1
+        <releaseNotes>v1.1
 * ISolutionExplorer API, with full solution traversal, behaviors
   for selecting, expanding and collapsing nodes, etc.
 * Integration with Adapter pattern for pluggable conversion of 
   solution explorer nodes (i.e. projectNode.As&lt;EnvDTE.Project&gt;())
 * Improved diagnostics and debug-time rendering of nodes
 * Improved reporting of composition errors in the Clide output window
+
 v1.0
 * Full support for MEF-exported commands (ICommandExtension) and command filters
 * ToolWindow support
 * Tools options pages support
-        </releaseNotes>
+</releaseNotes>
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
         <dependencies />
