Added forward slash to see if that truly ignores the Src/Clide/nuget output folder...

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Core NuGet temporary location
-Src/Clide/nuget
+Src/Clide/nuget/
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
